z-index should fix stacking-context for all charts.

--- a/src/charts/css/charts.css
+++ b/src/charts/css/charts.css
@@ -207,6 +207,7 @@ select, input, textarea {
 .ciview-chart-content{
     flex:1 1 auto;
     position:relative;
+    z-index: 0;
     min-height:1px;
     background-color: var(--main_panel_color);
     color: var(--text_color);
